--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -6,7 +6,7 @@ import { render } from 'astro:content';
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
 	return posts.map((post) => ({
-		params: { slug: post.data.slug },
+		params: { slug: post.id },
 		props: post,
 	}));
 }
